--- a/views/productos/listaProductosU.html
+++ b/views/productos/listaProductosU.html
@@ -39,6 +39,12 @@
             <p class="help-block text-danger" ng-show="form.precioUnitario.$error.required">Campo obligatorio</p>
           </div>
       </div>
+      <div class="form-group has-feedback" ng-class="{'has-error': form.cantidad.$invalid, 'has-success': form.cantidad.$valid}">           
+          <input id="inputcantidad" type="text" placeholder="Cantidad a ingresar"  class="form-control" name="cantidad" ng-model="productsList.cantidad" required>                               
+          <div ng-show="form.cantidad.$dirty && form.cantidad.$invalid">
+            <p class="help-block text-danger" ng-show="form.cantidad.$error.required">Campo obligatorio</p>
+          </div>
+      </div>
       <div class="form-group has-feedback" ng-class="{'has-error': form.grupo.$invalid, 'has-success': form.grupo.$valid}">  
           <select id="inputgrupo" placeholder="Grupo" class="form-control" name="grupo" ng-model="productsList.grupo" required>
             <option>Verduras</option>
