--- a/views/ventas/clientesCRD.html
+++ b/views/ventas/clientesCRD.html
@@ -19,12 +19,16 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+              <div ng-show="clienteCreado" class="alert alert-success alert-dismissible" role="alert" style="padding: 7px 30px 6px 8px; margin: -6px 45px 1px 0px;">
+                <button type="button" class="close" ng-click="closeAlert()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <span>El cliente se ha registrado exitosamente.</span>
+              </div>
               <h4 class="modal-title" id="myModalLabel">Nuevo Cliente</h4>
               <div id="errorProveedor" class="text-danger"></div>
             </div>
             <div class="modal-body">
               <form id="form-proveedor-compra" role="form" name="form">
-                 <div class="form-group has-feedback" ng-class="{'has-error': form.id.$invalid || exitsCustomer(), 'has-success': form.id.$valid}">           
+                <div class="form-group has-feedback" ng-class="{'has-error': form.id.$invalid || exitsCustomer(), 'has-success': form.id.$valid}">           
                     <input id="inputid" type="text" autocomplete="off" placeholder="Id"  class="form-control" name="id" ng-model="customers.id" required>                               
                     <div ng-show="form.id.$dirty && form.id.$invalid || exitsCustomer()">
                       <p class="help-block text-danger" ng-show="form.id.$error.required">Campo obligatorio</p>
@@ -71,7 +75,7 @@
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>              
               <button type="button" class="btn btn-primary btn-grabar-proveedor-compra" data-dismiss="modal" ng-click="createNewCustomer(form)" ng-disabled="form.$invalid || exitsCustomer()">Grabar</button>
-            </div>
+            </div>         
           </div>
         </div>
       </div>
