--- a/views/ventas/registroVentasCRD.html
+++ b/views/ventas/registroVentasCRD.html
@@ -258,6 +258,10 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                <div ng-show="clienteCreado" class="alert alert-success alert-dismissible" role="alert" style="padding: 7px 30px 6px 8px; margin: -6px 45px 1px 0px;">
+                <button type="button" class="close" ng-click="closeAlert()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <span>El cliente se ha registrado exitosamente.</span>
+                </div>
                 <h4 class="modal-title" id="myModalLabel">Nuevo Cliente</h4>
                 <div id="errorProveedor" class="text-danger"></div>
               </div>
